# land-tax-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirement.txt
app/api/routes/: health.py  maps.py  parcels.py  tax.py
app/api/types/: schemas.py
app/core/: app_state.py  config.py  database.py
app/models/: domain.py  parcel.py
app/services/: decision_engine.py  map_service.py  parcel_service.py  tax_service.py  vision_service.py
config/: config.yaml
